src/test/ui/issues/10000-19999/issue-10969.stderr
error[E0618]: expected function, found `i32`
  --> $DIR/issue-10969.rs:2:5
   |
LL | fn func(i: i32) {
   |         - `i32` defined here
LL |     i();
   |     ^--
   |     |
   |     call expression requires function

error[E0618]: expected function, found `i32`
  --> $DIR/issue-10969.rs:6:5
   |
LL |     let i = 0i32;
   |         - `i32` defined here
LL |     i();
   |     ^--
   |     |
   |     call expression requires function

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0618`.
